--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<marquee>
+		<h1>Welcome to Accio Jobs!</h1>
+	</marquee>
+
+	<h1>
+		<a href="https://acciojob.com/blog/">Blog</a>
+	</h1>
+
+	<!-- article 1 -->
+	
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
