--- a/main.html
+++ b/main.html
@@ -18,7 +18,32 @@
 	</h1>
 
 	<!-- article 1 -->
-	
+	<img height="200px" src="https://plus.unsplash.com/premium_photo-1694825173178-3d2c9bbf5b5f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60">
+	<h1>
+		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">	Brute Force vs. Optimization</a>
+	</h1>
+	<p>
+		We can say that optimization is...
+	</p>
+
+	<!-- article 2 -->
+	<img height="200px" src="https://plus.unsplash.com/premium_photo-1694825173178-3d2c9bbf5b5f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60">
+	<h1>
+		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">	DSA vs. Competitive Programming</a>
+	</h1>
+	<p>
+		We can say that optimization is...
+	</p>
+
+
+	<!-- article 3 -->
+	<img height="200px" src="https://plus.unsplash.com/premium_photo-1694825173178-3d2c9bbf5b5f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60">
+	<h1>
+		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">	Brute Force vs. Optimization</a>
+	</h1>
+	<p>
+		We can say that optimization is...
+	</p>
 
 	
     <script type="text/javascript" src="./script.js">
