--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
 		<a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a>
 	</h1>
 	<p>
-		We can say that optimization is...
+		As a job seeker, you may wonder..
 	</p>
 
 	
